welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:5: error: not found: value GetDirection
    var pos:Direction=GetDirection()
                      ^